# sitelen-layer-plugin

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.3.5.md  RELEASE_NOTES_v0.3.6.md  RELEASE_NOTES_v0.3.7.md  RELEASE_NOTES_v0.3.8.md  RELEASE_NOTES_v0.3.9.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: python-static-publish.yml  release-preflight.yml  release-publish.yml
adapters/: README.md
adapters/browser-extension/: README.md  background.js  content.js  entry.json  manifest.json
adapters/ghost/: README.md  entry.json  manifest.json  template.hbs
adapters/logseq/: README.md  entry.json  logseq-plugin.json  main.ts
adapters/obsidian/: README.md  entry.json  (+2 more)
demo/: index.html  main.ts  playground.html  playground.ts
docs/: INTEGRATION_PLAYBOOK.md  MIGRATION_v0.3.0.md  RELEASE_PIPELINE_SETUP.md  V0.3_INTEGRATION_TRACK.md
python/sitelen-layer-static/: README.md  pyproject.toml
python/sitelen-layer-static/src/sitelen_layer_static/: __init__.py  _api.py
python/sitelen-layer-static/src/sitelen_layer_static/assets/: sitelen-pona-font.css
python/sitelen-layer-static/tests/: test_api.py
scripts/: pack-adapters.mjs  smoke-adapter-packages.mjs  smoke-publication.mjs
src/: cli.ts  detector.test.ts  detector.ts  index.ts  integration-adapters.test.ts  next.ts  package-exports.test.ts  plugin.dom.test.ts  plugin.ts  presets.test.ts  presets.ts  profiles.test.ts  profiles.ts  react.ts  sitelen-emoji-truth.ts  styles.css  svelte.ts  types.ts  usageDashboard.ts  vite-plugin.ts  vue.ts  webpack-plugin.ts
(+19 files in other folders)
